Closed Bug 468187 Opened 16 years ago Closed 16 years ago

Workers: Timeout ids should start at 1, not 0

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b3

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

Attached patch PatchSplinter Review
Timeout ids should start at 1, not 0. Otherwise the standard ' if (myInterval) { clearInterval(myInterval); }' doesn't work.
Flags: blocking1.9.1?
Attachment #351631 - Flags: superreview?(jst)
Attachment #351631 - Flags: review?(jst)
Comment on attachment 351631 [details] [diff] [review]
Patch

r+sr+a=jst
Attachment #351631 - Flags: superreview?(jst)
Attachment #351631 - Flags: superreview+
Attachment #351631 - Flags: review?(jst)
Attachment #351631 - Flags: review+
Attachment #351631 - Flags: approval1.9.1+
Flags: blocking1.9.1?
Pushed changeset 242a58a529d7 to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Pushed changeset 0ef1e0968b2b to mozilla-1.9.1.
Keywords: fixed1.9.1
Target Milestone: mozilla1.9.1 → mozilla1.9.1b3
If this is a standard idiom (sigh), surely we should have a test to make sure it remains one, no?
Flags: in-testsuite?
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: