Bug 468187 - 'Workers: Timeout ids should start at 1, not 0'. r+sr+a=jst